# A-Reinforcement-Learning-Algorithm-for-Adaptive-Learning

./: README.md  pyproject.toml
analysis/: reward_plotter.py  visualization.py
data/: curriculum_adaptive_learning_dataset.json
environments/: AdaptiveLearningEnv.py
logs/: test_results.csv
models/checkpoints/: ppo_model.pt  ppo_model_5000.pt
models/ppo_model/: ActorCritic.py  PPO.py  utils.py
tests/: test.py
training/: config.yaml  train.py
utils/: data_generator.py  load_dataset.py  logger.py
